[package]
name = "quicksilver_hack"
version = "0.1.0"
authors = ["Rod <rod@badlydrawngames.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicksilver = "*"
# quicksilver = { path = "../quicksilver", version = "*" }
gilrs = "*"
rand = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = "0.4.*"
